[package]
name = "jed"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]
edition = "2018"

[[bin]]
name = "jed"
path = "src/main.rs"
bench = false

[lib]
bench = false

[profile.bench]
debug = true
[profile.release]
debug = true

[dependencies]
tui = "0.11"
termion = "1.5"
serde_json = "1.0.57"
ego-tree = "0.6.1"
argh= "0.1.3"
cpuprofiler = "0.0.4"
[dependencies.jq-rs]
version = "0.4.1"
features = ["bundled"]
[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "src/benchmarks.rs"
harness = false
debug = true
