[package]
name = "jex"
version = "0.1.2"
authors = ["Roger Curley <rocurley@gmail.com>"]
edition = "2018"
license = "MIT"
description = "jex is a tool for interactively exploring and manipulating json files"
homepage = "https://github.com/rocurley/jex/tree/master"
readme = "README.md"
repository = "https://github.com/rocurley/jex/tree/master"
keywords = ["json", "jq"]
categories = ["command-line-utilities"]

[[bin]]
name = "jex"
path = "src/main.rs"
bench = false

[lib]
bench = false

[profile.bench]
debug = true
[profile.release]
debug = true

[features]
defaullt = []
dev-tools = ["cpuprofiler",  "prettytable-rs", "coredump"]

[dependencies]
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
crossterm = "0.17"
serde_json = "1.0.57"
serde = "1.0.116"
argh= "0.1.3"
cpuprofiler = {version = "0.0.4", optional = true}
prettytable-rs = {version = "0.8.0", optional = true}
coredump = {version = "0.1.1", optional = true}
rustyline = "6.3.0"
unicode-width = "0.1.8"
unicode-general-category = "0.2.0"
regex = "1.4"
log = "0.4.13"
simplelog = { version = "0.9", features = ["test"] }
[dependencies.jq-sys]
version = "0.2.2"
features = ["bundled"]
[dev-dependencies]
proptest = "0.10.1"
criterion = "0.3"
pretty_assertions = "0.6.1"
cpuprofiler = "0.0.4"
[replace]
'rustyline:6.3.0' = { path = 'rustyline'}

[[bench]]
name = "benchmark"
path = "src/benchmarks.rs"
harness = false
